# fastapi-backend

./: README.md  main.py  pyproject.toml  pytest.ini
api/: __init__.py
api/product/v1/: product.py
api/user/v1/: user.py
app/: server.py
app/auth/services/: jwt.py
app/product/models/: product.py
app/product/schemas/: product.py
app/product/services/: product.py
app/user/models/: user.py
app/user/schemas/: user.py
app/user/services/: user.py
core/: config.py  consts.py
core/cache/: redis.py
core/db/: __init__.py  session.py  standalone_session.py  transactional.py
core/db/mixins/: timestamp_mixin.py
core/exceptions/: __init__.py  product.py  user.py
core/fastapi/dependencies/: __init__.py
core/fastapi/middlewares/: authentication.py  sqlalchemy.py
core/utils/: token_helper.py  utils.py
docker/api/: Dockerfile  startup.sh
docker/db/: Dockerfile
docker/redis/: Dockerfile
migrations/: env.py
migrations/versions/: a473563b8d6b_initial.py
postman/: test.postman_collection.json
tests/: conftest.py
tests/integration_tests/api/product/v1/: test_product.py
tests/integration_tests/api/user/v1/: test_user.py
