[tool.poetry]
name = "backend-1"
version = "0.1.0"
description = "Backend 1"
authors = ["Tran <phantran197@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
alembic = "^1.8.1"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
PyJWT = "^2.4.0"
uvicorn = "^0.18.3"
fastapi = "^0.81.0"
celery = "^5.2.7"
gunicorn = "^20.1.0"
fastapi-event = "^0.1.3"
pythondi = "^1.2.4"
ujson = "^5.4.0"
aiomysql = "^0.1.1"
click = "^8.1.3"
greenlet = "1.1.3"
redis = "^4.3.4"
pydantic = "^1.10.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
black = "^22.10.0"
flake8 = "^6.0.0"
httpx = "^0.23.1"
pytest-asyncio = "^0.20.2"
alchemy-mock = "^0.4.3"
pytest-sqlalchemy-mock = "^0.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
